Añadidos titulo1 y parrafo1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>El titulazo</h1>
+    <p>El parrafo del santo grial</p>
 </body>
 </html>
