--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>El titulazo</h1>
     <p>El parrafo del santo grial</p>
+    <h2>El titulin de Enlil</h2>
+    <p>El parrafo de los sumerios</p>
 </body>
 </html>
